Cambios de camilo

--- a/Sprint 1/index.html
+++ b/Sprint 1/index.html
@@ -20,7 +20,7 @@
             <img src="img/sportacusNormal.jpg" id="imagen" alt="Imagen 1">
             <div class="formulario">
                 <form id="form">
-                    <h1>Calcula tu IMC</h1>
+                    <h1>Calcula tu IMC - Solo para mayores de 18 años</h1>
                     <label for="unidad">Selecciona la Unidad</label>
                     <select id="unidad">
                         <option value="metrico"> Sistema Métrico (kg/cm)</option>
