--- a/Sprint 1/public/index.html
+++ b/Sprint 1/public/index.html
@@ -12,7 +12,6 @@
 
     <title>Calculadora IMC</title>
 
-    <script src="./public/script.js" defer></script>
 </head>
 <body>
     <section>
@@ -37,13 +36,6 @@
                         
                     </div>
                 </form>
-                <!-- <form action="/submit-data" method="POST">
-                    <label for="name">Name:</label>
-                    <input type="text" id="name" name="name">
-                    <label for="message">Message:</label>
-                    <textarea id="message" name="message"></textarea>
-                    <button type="submit">Submit</button>
-                  </form> -->
             </div>
         </div>
         <div class="explanation">
@@ -54,5 +46,7 @@
             </div>
 
     </section>
+    <script src="/script.js" defer></script>
+
 </body>
 </html>
