--- a/Sprint 1/public/index.html
+++ b/Sprint 1/public/index.html
@@ -19,7 +19,7 @@
             <img src="img/sportacusNormal.jpg" id="imagen" alt="Imagen 1">
             <div class="formulario">
                 <a href="/historial">historial</a>
-                <form id="form" method="POST" action="/submit-data">
+                <form id="form">
                     <!-- <h1>Calcula tu IMC - Solo para mayores de 18 años</h1> -->
                     <label for="unidad">Selecciona la Unidad</label>
                     <select id="unidad" name="unidad">
