--- a/Sprint 1/main.html
+++ b/Sprint 1/main.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login y Register - Calculadora IMC</title>
     
+    <link rel="icon" type="icon" href="./img/icon2.png">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/estiloLogin.css">
 </head>
@@ -32,7 +33,9 @@
                 </div>
             </div>
             <p id="principal">¿Quieres ver el historial de IMCs calculados en nuestra página?</p>
-            <button id="btn_historial">Historial</button>
+            <a href="histoIMC.html" target="_blank"> 
+                <button id="btn_historial">Historial</button>
+            </a>
 
         </main>
 
