--- a/Sprint 1/assets/pages/calculadora.html
+++ b/Sprint 1/assets/pages/calculadora.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="icon" href="./img/icon2.png"> 
+    <link rel="stylesheet" href="../css/estiloCalculadora.css">
+    <link rel="icon" type="icon" href="../../img/icon2.png"> 
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,12 +12,12 @@
 
     <title>Calculadora IMC</title>
 
-    <script src="script.js" defer></script>
+    <script src="../scripts/calculadora.js" defer></script>
 </head>
 <body>
     <section>
         <div class="container">
-            <img src="img/sportacusNormal.jpg" id="imagen" alt="Imagen 1">
+            <img src="../../img/sportacusNormal.jpg" id="imagen" alt="Imagen 1">
             <div class="formulario">
                 <form id="form">
                     <h1>Calcula tu IMC - Solo para mayores de 18 años</h1>
@@ -42,7 +42,7 @@
             <p>El Índice de Masa Corporal (IMC) es una medida que se calcula dividiendo el peso de una persona en kilogramos por el cuadrado de su altura en metros. El IMC es una herramienta útil para determinar si una persona tiene un peso saludable en relación con su altura. Sin embargo, ignora el porcentaje de grasa y masa muscular, por lo que en muchos casos es necesario consultar con un experto.</p>
             <div class="text-image">
                 <h1>¿Cómo puede afectarme mi IMC?</h1>
-                <img src="img/CUADRO-IMC.png" alt="Imagen 2">
+                <img src="../../img/CUADRO-IMC.png" alt="Imagen 2">
             </div>
 
     </section>
