--- a/Sprint 1/main.html
+++ b/Sprint 1/main.html
@@ -33,7 +33,7 @@
                 </div>
             </div>
             <p id="principal">¿Quieres ver el historial de IMCs calculados en nuestra página?</p>
-            <a href="histoIMC.html" target="_blank"> 
+            <a href="assets/pages/histoIMC.html" target="_blank"> 
                 <button id="btn_historial">Historial</button>
             </a>
 
