boton temporal en login

--- a/Sprint 1/main.html
+++ b/Sprint 1/main.html
@@ -28,7 +28,9 @@
                         <h2>Iniciar Sesión</h2>
                         <input type="text" placeholder="Correo Electronico">
                         <input type="password" placeholder="Contraseña">
-                        <button>Entrar</button>
+                        <!-- <button>Entrar</button> -->
+                        <a href="./assets/pages/calculadora.html">Entrar</a>
+                        <!-- mientras no funcione el boton esto sirve por ahora -->
                     </form>
                 </div>
             </div>
