la pagina de inicio ahora es el login
reparo bug de css

--- a/Sprint 1/public/assets/pages/main.html
+++ b/Sprint 1/public/assets/pages/main.html
@@ -24,12 +24,12 @@
                 <!--Formulario de Login y registro-->
                 <div class="contenedor__login-register">
                     <!--Login-->
-                    <form action="" class="formulario__login">
+                    <form action="" class="formulario__login" method="get">
                         <h2>Iniciar Sesión</h2>
                         <input type="text" placeholder="Correo Electronico">
                         <input type="password" placeholder="Contraseña">
                         <!-- <button>Entrar</button> -->
-                        <a href="./assets/pages/calculadora.html">Entrar</a>
+                        <a href="/calculadora">Entrar</a>
                         <!-- mientras no funcione el boton esto sirve por ahora -->
                     </form>
                 </div>
