--- a/Sprint 1/public/assets/pages/registro.html
+++ b/Sprint 1/public/assets/pages/registro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
-    <link rel="stylesheet" href="../css/estiloRegistro.css">
+    <link rel="stylesheet" href="assets/css/estiloRegistro.css">
 </head>
 <body>
     <main>
