--- a/Sprint 1/public/assets/pages/calculadora.html
+++ b/Sprint 1/public/assets/pages/calculadora.html
@@ -18,9 +18,9 @@
         <div class="container">
             <img src="../../img/sportacusNormal.jpg" id="imagen" alt="Imagen 1">
             <div class="formulario">
-                <a href="/historial">historial</a>
+                <a href="/Ver historial">historial</a>
                 <form id="form">
-                    <h1>Calcula tu IMC - Solo para mayores de 18 años</h1>
+                    <h1>Hola Usuario, calcula tu IMC - Solo para mayores de 18 años</h1>
                     <label for="unidad">Selecciona la Unidad</label>
                     <select id="unidad">
                         <option value="metrico"> Sistema Métrico (kg/cm)</option>
