Prueba de interceptor

--- a/Sprint 1/public/assets/pages/histoIMC.html
+++ b/Sprint 1/public/assets/pages/histoIMC.html
@@ -21,7 +21,7 @@
             </ul>
         </div>
     </div> 
-
-    <script src="script.js" defer></script>
+    <script src="./axiosInterceptor.js"></script>
+    <script src="./assets/scripts/script.js" defer></script>
 </head>
 <body>
