--- a/Sprint 1/public/assets/pages/histoIMC.html
+++ b/Sprint 1/public/assets/pages/histoIMC.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/estiloHistoIMC.css">
+    <link rel="stylesheet" href="./assets/css/estiloHistoIMC.css">
     <link rel="icon" type="icon" href="../../img/icon2.png"> 
 
     <title>Historial IMC</title>
@@ -20,8 +20,8 @@
                 <li>Quinto registro</li>
             </ul>
         </div>
-    </div> 
-    <script src="./axiosInterceptor.js"></script>
-    <script src="./assets/scripts/script.js" defer></script>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/axios@0.21.1/dist/axios.min.js"></script>
+    <script type="module" src="./assets/scripts/script.js"></script>
 </head>
 <body>
